sandbox/output
GildedRose.java:28: error: cannot find symbol
    public static Function<Item, Item> generateNormalItemsForSellByDateNotPassed() {
                  ^
  symbol:   class Function
  location: class GildedRose
1 error
